# beartype

./: .codecov.yml  .coveragerc  .gitignore  .mypy.ini  .readthedocs.yaml  .readthedocs.yml  CHANGES_REVERT_PLAN.md  COMPREHENSIVE_SKIP_ANALYSIS.md  DESCRIPTOR_PYPY_FIX_SUMMARY.md  GEMINI.md  GRAALPY_CHANGES_ANALYSIS.md  GRAALPY_CI_SETUP.md  GRAALPY_COLLECTION_INVESTIGATION.md  GRAALPY_DEEP_INVESTIGATION.md  GRAALPY_INTEGRATION_FINAL.md  GRAALPY_PERFORMANCE_COMPARISON.md  GRAALPY_STATUS.md  GRAALPY_TEST_SUMMARY.md  LICENSE  MANIFEST.in  MINIMAL_PYPY_CHANGES_SUMMARY.md  Makefile  NESTED_CLOSURES_ANALYSIS.md  PYPY_COMPATIBILITY.md  PYPY_UNION_FIX_SUMMARY.md  README.md  README.rst  REMAINING_PYPY_SKIPS_ANALYSIS.md  conftest.py  deep_dive_enum.py  mkdocs  mkdocs.yml  mypy  mypy.ini  pyproject.toml  pyproject.toml.old  pyright  pyrightconfig.json  pytest  pytest.ini  (+9 more)
.claude/: graalpy-instructions.md  graalpy-review.md
.github/: FUNDING.yml  SECURITY.md  dependabot.yml
.github/workflows/: codespell.yml  gemini-dispatch.yml  gemini-invoke.yml  gemini-triage.yml  python_docs.yml  python_release.yml  python_test.yml  pythonpackage.yml  pythonrelease.yml
.github/workflows.old/: gemini-review.yml  gemini-scheduled-triage.yml
analysis_scripts/: README.md  deep_dive_functools_wraps.py  deep_dive_pep563.py  test_pep563_namedtuple.py  test_pypy_pep604.py
beartype/: __init__.py  _conf.py  _decor.py  _metaverse.py  _protocol.py  _util.py  cave.py  meta.py  metadata.py  roar.py  typing.py
beartype/_cave/: _caveabc.py  _cavefast.py  _cavemap.py  abc.py  mapping.py
beartype/_check/: _checksnip.py  checkcache.py  checkcall.py  checkmagic.py  checkmake.py  checktester.py
beartype/_check/_expr/: __init__.py  _exprmagic.py  _exprscope.py  _exprsnip.py  exprcode.py
beartype/_check/code/: __init__.py  _codescope.py  _codesnip.py  codecls.py  codemagic.py  codemain.py  codemake.py  codemake2.py  codescope.py  codesnip.py
beartype/_check/conv/: convcoerce.py  convreduce.py  convsanify.py
beartype/_check/convert/: _convcoerce.py  convcoerce.py  convmain.py  convreduce.py  convsanify.py
beartype/_check/error/: _errcause.py  _errdata.py  _errmap.py  _errorcause.py  _errordata.py  _errortype.py  _errtype.py  errcause.py  errget.py  errmain.py  errorget.py  errormain.py
beartype/_check/expr/: __init__.py  _exprscope.py  _exprsnip.py  exprcode.py  exprmagic.py  exprmake.py
beartype/_check/forward/: _fwdref.py  (+8 more)
beartype/_conf/: _conffrozendict.py  _confget.py  _confoverrides.py  _conftest.py  confcache.py  confcls.py  confcommon.py  confenum.py  confmain.py  confoverrides.py  conftest.py
beartype/_data/: datakind.py  datatyping.py
beartype/_decor/: __init__.py  _call.py  _core.py  _data.py  _decorcall.py  _decorcore.py  _decormore.py  _decornontype.py  _decortype.py  _pep563.py  _typistry.py  annotation.py  code.py  conf.py  decor.py  decorcache.py  decorcore.py  decormain.py  main.py  parameter.py  pep484.py  returnval.py  signature.py  snippet.py  util.py
beartype/_util/: utilcache.py  utilcallable.py  utilclass.py  utilhint.py  utilobj.py  utilobjattr.py  utilobject.py  utilobjectattr.py  utilobjget.py  utilobjmake.py  utilobjtest.py  utilpy.py  utilstr.py  utiltyping.py
beartype/_vale/: _valesnip.py  _valesub.py
beartype/abby/: __init__.py  _abbytest.py
beartype/bite/: _infermain.py
beartype/cave/: __init__.py  _caveabc.py  _cavelib.py  _caveslow.py
beartype/claw/: __init__.py  _clawast.py  _clawcore.py  _clawenum.py  _clawhook.py  _clawimportlib.py  _clawload.py  _clawloader.py  _clawmagic.py  _clawmain.py  _clawpackagenames.py  _clawpathhooks.py  _clawregistrar.py  _clawstate.py  _clawtyping.py
beartype/door/: __init__.py  _doorcheck.py  _doorcls.py  _doordata.py  _doormap.py  _doormeta.py  _doortest.py  _doortyping.py
beartype/math/: __init__.py  _mathcls.py
beartype/must/: __init__.py  _musthint.py
beartype/peps/: __init__.py  _pep563.py
beartype/plug/: __init__.py  _plughintable.py  _plugmixin.py  _plugproto.py
beartype/roar/: __init__.py  _roarexc.py  _roarwarn.py
beartype/typing/: __init__.py  _typingcache.py  _typingpep544.py
beartype/vale/: __init__.py  _valehint.py  _valeis.py  _valeisabc.py  _valeiscls.py  _valeiscore.py  _valeisobj.py  _valeisoper.py  _valeissub.py  _valesub.py  _valevale.py
beartype_test/: conftest.py  test_beartype.py  test_decor.py  test_is_subclass.py  test_is_subtype.py
beartype_test/_util/: pytci.py  pytcontext.py  pytroar.py
beartype_test/a00_unit/: README.rst  conftest.py  test_typing.py
beartype_test/a90_func/: README.rst
beartype_test/graalpy_analytics/: ASYNC_BUG_SUMMARY.txt  GRAALPY_ASYNC_BUG_ANALYSIS.md  GRAALPY_DOCUMENTATION_REVIEW.md  GRAALPY_FINAL_SUMMARY.md  GRAALPY_SUBPROCESS_INVESTIGATION.md  GRAALPY_TESTING_INSTRUCTIONS.md  GRAALPY_TEST_SUMMARY.md  INDEX.md  README.md  WHY_PTH_FILE_MISSING.md  investigate_async_union_bug.py  investigate_is_operator.py  investigate_module_names.py  investigate_pytest_bug.py  investigate_tuple_interning.py  investigate_tuple_literal.py  profile_cache_decorator.py  profile_is_python_graalpy_cache_decorator.md  simple_async_test.py  test_async_beartype.py  test_async_pytest.py  test_callable_empty_tuple.py  test_method_type.py  test_protocol_graalpy.py  test_protocol_typevar.py  test_protocol_typevar_pytest.py  test_pytest_detection.py  test_tuple_identity.py  test_workaround_idea.py
beartype_test/unit/: test_decor.py
beartype_test/util/: README.rst  pytci.py  pytcontext.py  pyterror.py  pytpath.py  pytroar.py
doc/: Makefile  RELEASE.rst  make.bat  requirements.txt
doc/source/: 404.rst  changes.rst  conf.py  index.rst  reference.rst
doc/src/: _links.rst  api.rst  api_claw.rst  api_decor.rst  api_door.rst  api_roar.rst  api_vale.rst  code.rst  conf.py  eli5.rst  faq.rst  index.rst  install.rst  math.rst  moar.rst  pep.rst  tldr.rst
docs/: _links.md  api.md  api_claw.md  api_decor.md  api_door.md  api_roar.md  api_vale.md  code.md  eli5.md  faq.md  index.md  install.md  math.md  moar.md  pep.md  tldr.md
docs/js/: mathjax.js
overrides/: main.html
(+1775 files in other folders)
